@@ -1,0 +1,9 @@
+gatling can do HTTP redirects.
+
+To do it, create a symlink like this:
+
+  $ ln -s http://www.google.com/ search.html
+
+Then, if someone tries to access search.html via HTTP, gatling will
+detect the special broken symlink and send the user a HTTP redirect to
+www.google.com.
